Some more Updates

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2><i class="fa-solid fa-database"></i> SQL</h2>
             <div class="content">
               <ul>
-                <li><i class="fa-solid fa-play"></i> <a href="https://www.youtube.com/watch?v=HXV3zeQKqGY" target="_blank">MySQL Full Course for Beginners [YouTube]</a></li>
+                <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=HXV3zeQKqGY" target="_blank">MySQL Full Course for Beginners [YouTube]</a></li>
                 <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=7S_tz1z_5bA" target="_blank">SQL Tutorial – Full Course [freeCodeCamp]</a></li>
                 <li><i class="fa-solid fa-laptop-code"></i> <a href="https://mode.com/sql-tutorial/" target="_blank">Mode SQL Tutorial (Interactive)</a></li>
                 <li><i class="fa-solid fa-book-open"></i> <a href="https://www.w3schools.com/sql/" target="_blank">W3Schools SQL Guide</a></li>
@@ -60,15 +60,17 @@
           <!-- Python -->
           <article class="style2">
             <span class="image"><img src="images/python.jpg" alt="" /></span>
-            <h2><i class="fa-solid fa-code"></i> Python</h2>
+            <h2><i class="fa-brands fa-python"></i> Python</h2>
             <div class="content">
               <ul>
-                <li><i class="fa-brands fa-python"></i> <a href="https://www.youtube.com/watch?v=UrsmFxEIp5k" target="_blank">Python for Beginners [CodeWithHarry]</a></li>
-                <li><i class="fa-solid fa-terminal"></i> <a href="https://www.youtube.com/watch?v=_uQrJ0TkZlc" target="_blank">Python for Beginners [Mosh]</a></li>
+                <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=UrsmFxEIp5k" target="_blank">Python for Beginners [CodeWithHarry]</a></li>
+                <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=_uQrJ0TkZlc" target="_blank">Python for Beginners [Mosh]</a></li>
+                <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=K8L6KVGG-7o&t=1868s" target="_blank">Writing and Matching Regex Patterns</a></li>
                 <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=rfscVS0vtbw" target="_blank">Python Tutorial [freeCodeCamp]</a></li>
                 <li><i class="fa-solid fa-laptop-code"></i> <a href="https://realpython.com/" target="_blank">Real Python – Tutorials</a></li>
                 <li><i class="fa-solid fa-book"></i> <a href="https://docs.python.org/3/tutorial/" target="_blank">Official Python Docs</a></li>
                 <li><i class="fa-solid fa-flask"></i> <a href="https://www.youtube.com/watch?v=Jzv3G5iDLvw" target="_blank">REST API Using Flask [CodeWithHarry]</a></li>
+                <li><i class="fa-solid fa-chart-line"></i> <a href="https://www.youtube.com/playlist?list=PL-osiE80TeTvipOqomVEeZ1HRrcEvtZB_" target="_blank">Matplotlib Tutorials</a></li>
               </ul>
             </div>
           </article>
@@ -80,7 +82,6 @@
             <div class="content">
               <ul>
                 <li><i class="fa-brands fa-youtube"></i> <a href="https://www.youtube.com/watch?v=VLZt4zF1K10" target="_blank">Excel Full Course [TechOnTheNet]</a></li>
-                <li><i class="fa-solid fa-chart-column"></i> <a href="https://www.youtube.com/watch?v=8Vwi2WbI3d8" target="_blank">Excel for Data Analysis [Chandoo]</a></li>
                 <li><i class="fa-solid fa-wand-magic-sparkles"></i> <a href="https://exceljet.net/" target="_blank">ExcelJet – Tips & Charts</a></li>
                 <li><i class="fa-solid fa-circle-question"></i> <a href="https://support.microsoft.com/en-us/excel" target="_blank">Official Microsoft Excel Help</a></li>
               </ul>
