--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2><i class="fa-solid fa-graduation-cap"></i> Bootcamp</h2>
             <div class="content">
               <ul>
-                <li><i class="fa-solid fa-rocket"></i> <a href="https://www.youtube.com/watch?v=Z9ZvJmWg8ac" target="_blank">Data Analyst Bootcamp [Alex]</a></li>
+                <li><i class="fa-solid fa-rocket"></i> <a href="https://www.youtube.com/playlist?list=PLUaB-1hjhk8FE_XZ87vPPSfHqb6OcM0cF" target="_blank">Data Analyst Bootcamp [Alex]</a></li>
                 <li><i class="fa-solid fa-flask"></i> <a href="https://www.youtube.com/watch?v=rfscVS0vtbw" target="_blank">Complete Data Science Bootcamp</a></li>
                 <li><i class="fa-solid fa-chart-line"></i> <a href="https://www.youtube.com/watch?v=DXB7HXf1OVs" target="_blank">Analytics Process Bootcamp</a></li>
                 <li><i class="fa-brands fa-free-code-camp"></i> <a href="https://www.youtube.com/watch?v=8YQOs01V5Jo" target="_blank">Data Analytics Bootcamp [freeCodeCamp]</a></li>
