--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="tiles">
           <!-- SQL -->
           <article class="style1">
-            <span class="image"><img src="images/sql.jpg" alt="" /></span>
+            <!--<span class="image"><img src="images/sql.jpg" alt="" /></span>-->
             <h2><i class="fa-solid fa-database"></i> SQL</h2>
             <div class="content">
               <ul>
@@ -59,7 +59,7 @@
 
           <!-- Python -->
           <article class="style2">
-            <span class="image"><img src="images/python.jpg" alt="" /></span>
+           <!-- <span class="image"><img src="images/python.jpg" alt="" /></span>-->
             <h2><i class="fa-brands fa-python"></i> Python</h2>
             <div class="content">
               <ul>
@@ -77,7 +77,7 @@
 
           <!-- Excel -->
           <article class="style3">
-            <span class="image"><img src="images/excel.jpg" alt="" /></span>
+            <!--<span class="image"><img src="images/excel.jpg" alt="" /></span>-->
             <h2><i class="fa-solid fa-file-excel"></i> Excel</h2>
             <div class="content">
               <ul>
@@ -90,7 +90,7 @@
 
           <!-- Bootcamp -->
           <article class="style4">
-            <span class="image"><img src="images/bootcamp.jpg" alt="" /></span>
+            <!--<span class="image"><img src="images/bootcamp.jpg" alt="" /></span>-->
             <h2><i class="fa-solid fa-graduation-cap"></i> Bootcamp</h2>
             <div class="content">
               <ul>
