--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <section class="tiles">
           <!-- SQL -->
           <article class="style1">
-            <!--<span class="image"><img src="images/sql.jpg" alt="" /></span>-->
             <h2><i class="fa-solid fa-database"></i> SQL</h2>
             <div class="content">
               <ul>
@@ -59,7 +58,6 @@
 
           <!-- Python -->
           <article class="style2">
-           <!-- <span class="image"><img src="images/python.jpg" alt="" /></span>-->
             <h2><i class="fa-brands fa-python"></i> Python</h2>
             <div class="content">
               <ul>
@@ -77,7 +75,6 @@
 
           <!-- Excel -->
           <article class="style3">
-            <!--<span class="image"><img src="images/excel.jpg" alt="" /></span>-->
             <h2><i class="fa-solid fa-file-excel"></i> Excel</h2>
             <div class="content">
               <ul>
@@ -90,7 +87,6 @@
 
           <!-- Bootcamp -->
           <article class="style4">
-            <!--<span class="image"><img src="images/bootcamp.jpg" alt="" /></span>-->
             <h2><i class="fa-solid fa-graduation-cap"></i> Bootcamp</h2>
             <div class="content">
               <ul>
@@ -104,7 +100,6 @@
 
           <!-- Cheatsheets -->
           <article class="style5">
-            <span class="image"><img src="images/cheatsheet.jpg" alt="" /></span>
             <h2><i class="fa-solid fa-scroll"></i> Cheatsheets</h2>
             <div class="content">
               <ul>
@@ -144,9 +139,17 @@
             </ul>
           </form>
         </section>
-      </div>
-    </footer>
-  </div>
+
+        <!-- Follow Me Section -->
+        <section style="margin-top: 2rem;">
+          <h2>Follow Me On:</h2>
+          <div style="text-align: center;">
+            <a href="https://www.instagram.com/_abhi_c00l" target="_blank" class="icon brands fa-instagram" style="font-size: 2rem;">
+              <span class="label">Instagram</span>
+            </a>
+          </div>
+        </section>
+
 
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/browser.min.js"></script>
@@ -162,3 +165,4 @@
 </body>
 
 </html>
+
